After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724485 - nm-connection-editor: when editing bridge with STP disabled, the STP parameters are not disabled
nm-connection-editor: when editing bridge with STP disabled, the STP paramete...
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nm-connection-editor
git master
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-02-16 14:26 UTC by Thomas Haller
Modified: 2015-04-24 07:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Thomas Haller 2014-02-16 14:26:17 UTC
In nm-connection-editor, when editing a bridge, you can toggle the checkbox for STP, which then disables/enables the STP input fields.

When opening the connection editor for a bridge with STP disabled, these input fields are not disabled.
Comment 1 Jiri Klimes 2015-04-24 07:49:19 UTC
Fixed: 
7e6dcb4 editor: disable STP-related widgets if STP is off on init (bgo #724485) - master
b694a16 editor: disable STP-related widgets if STP is off on init (bgo #724485) - nma-1-0