editor: disable STP-related widgets if STP is off on init (bgo #724485)

https://bugzilla.gnome.org/show_bug.cgi?id=724485